# rostanga

./: .gitignore  Cargo.toml  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yaml
dirs-rs/: Cargo.toml
dirs-rs/src/: android.rs  lib.rs  lin.rs  mac.rs  wasm.rs  win.rs
docs/: notification-flow.md
isolation/: index.js
site/policy/: index.html
src/: locales.ts  main.ts
src-tauri/: Cargo.toml  firestore-listen-token.1000.tmp  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs
src-tauri/src/notifications/: modify_push_notification.rs
tauri-plugin-holochain/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-holochain-notification/: Cargo.toml  README.md  build.rs
tauri-plugin-holochain-notification/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-holochain-notification/examples/vanilla/: package.json
tauri-plugin-holochain-notification/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-holochain-notification/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-holochain-notification/permissions/schemas/: schema.json
tauri-plugin-holochain-notification/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  modify_push_notification.rs
tauri-plugin-holochain/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-holochain/android/: build.gradle.kts
tauri-plugin-holochain/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-holochain/android/src/main/: AndroidManifest.xml
tauri-plugin-holochain/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-holochain/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-holochain/ios/: Package.swift  README.md
tauri-plugin-holochain/ios/Sources/: ExamplePlugin.swift
tauri-plugin-holochain/permissions/autogenerated/: reference.md
tauri-plugin-holochain/permissions/schemas/: schema.json
tauri-plugin-holochain/src/: commands.rs  config.rs  desktop.rs  error.rs  filesystem.rs  http_server.rs  launch.rs  lib.rs  mobile.rs
tauri-plugin-holochain/src/commands/: get_locales.rs  get_runtime_info.rs  install_web_app.rs  list_apps.rs  open_app.rs  sign_zome_call.rs
tauri-plugin-holochain/ui/: index.html  package.json
tauri-plugin-holochain/ui/src/: main.ts
xliff/: sv.xlf
