[workspace]
resolver = "2"
members = [
  "tauri-plugin-holochain",
  "tauri-plugin-holochain-notification",
  "src-tauri",
]

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
opt-level = "z"
lto = true

[patch.crates-io]
swift-rs = { git = "https://github.com/guillemcordoba/swift-rs", branch = "main" }
tao = { git = "https://github.com/guillemcordoba/tao", branch = "dev" }

# dirs = { path = "./dirs-rs" }

# tx5 = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5" }
# tx5-core = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-core" }
# tx5-online = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-online" }
tx5-go-pion-sys = { git ="https://github.com/holochain/tx5", rev = "6ce7bafdc2d4fb6d63b1deb8a312ec3e9fae2aae" }
# tx5-go-pion = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-go-pion" }
# tx5-signal = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-signal" }
# tx5-signal-srv = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-signal-srv" }
# tx5-demo = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-demo" }
# tx5-go-pion-turn = { path = "/home/guillem/projects/holochain/core/tx5/crates/tx5-go-pion-turn" }
