[package]
name = "rostangatest"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rostangatest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-holochain = { path = "../tauri-plugin-holochain" }
tauri-plugin-log = "2.0.0-alpha"
tauri-plugin-notification = "2.0.0-alpha"

hc_zome_trait_pending_notifications = { git = "https://github.com/darksoil-studio/gather", branch = "main" }

holochain_types = { version = "=0.2.3", features = ["sqlite-encrypted"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-alpha"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
