[package]
name = "rostanga"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rostanga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.20", features = [] }
tauri-plugin-holochain = { path = "../tauri-plugin-holochain" }
tauri-plugin-holochain-notification = { path = "../tauri-plugin-holochain-notification" }
tauri-plugin-log = "2.0.0-alpha"
tauri-plugin-notification = { git = "https://github.com/guillemcordoba/plugins-workspace", branch = "v2" }

alerts = { git = "https://github.com/darksoil-studio/gather", branch = "without-template" }                                   # TODO: remove
hc_zome_notifications_types = { git = "https://github.com/darksoil-studio/notifications", branch = "for-hdk-0.3.0-beta-dev" } # TODO: remove
hrl = { git = "https://github.com/holochain-open-dev/common", branch = "for-hdk-0.3.0-beta-dev" }

firestore = "0.39"

app_dirs2 = "2.5.5"
futures = "0.3"
anyhow = "1"
log = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"

holochain_types = { version = "0.3.0-beta-dev" }
holochain_client = { git = "https://github.com/guillemcordoba/holochain-client-rust", branch = "for-hdk-0.3.0-beta-dev" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-alpha"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

