[package]
name = "tauri-plugin-holochain-notification"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-notification"

[dependencies]
tauri = { version = "2.0.0-alpha.18" }

tauri-plugin-holochain = { path = "../tauri-plugin-holochain" }
tauri-plugin-notification = { git = "https://github.com/guillemcordoba/plugins-workspace", branch = "v2" }

holochain_types = { version = "0.3.0-beta-dev", features = [
  "sqlite-encrypted",
] }
holochain_nonce = { version = "0.3.0-beta-dev" }
holochain_conductor_api = { version = "0.3.0-beta-dev" }
holochain_client = { git = "https://github.com/guillemcordoba/holochain-client-rust", branch = "for-hdk-0.3.0-beta-dev" }

hrl = { git = "https://github.com/holochain-open-dev/common", branch = "for-hdk-0.3.0-beta-dev" }

hc_zome_trait_pending_notifications = { git = "https://github.com/darksoil-studio/notifications", branch = "for-hdk-0.3.0-beta-dev" }
hc_zome_notifications_provider_fcm_types = { git = "https://github.com/darksoil-studio/notifications", branch = "for-hdk-0.3.0-beta-dev" }

yup-oauth2 = "8"
fcm_v1 = "0.3.0"

futures = "0.3"
jni = "0.21"
log = "0.4"
portpicker = "0.1"
serde = "1.0.193"
serde_json = "1.0"
thiserror = "1.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-alpha"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12" }
