[package]
name = "tauri-plugin-holochain"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.65"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain"

[dependencies]
tauri = { version = "2.0.0-alpha", features = [
  "devtools",
  "native-tls-vendored",
] }

mr_bundle = "0.3.0-beta-dev"
holochain = { version = "0.3.0-beta-dev", default-features = false, features = [
  "sqlite-encrypted",
  "tx5",
] }
holochain_types = { version = "0.3.0-beta-dev", default-features = false, features = [
  "sqlite-encrypted",
] }
holochain_client = { git = "https://github.com/guillemcordoba/holochain-client-rust", branch = "for-hdk-0.3.0-beta-dev" }
lair_keystore = "0.3.0"
holochain_keystore = { version = "0.3.0-beta-dev", default-features = false, features = [
  "sqlite-encrypted",
] }
holochain_conductor_api = { version = "0.3.0-beta-dev" }

hrl = { git = "https://github.com/holochain-open-dev/common", branch = "for-hdk-0.3.0-beta-dev" }

log = "0.4"
symlink = "0.1.0"
nanoid = "0.4.0"
sys-locale = "0.3"
app_dirs2 = "2.5.5"
async-std = "1.12"
serde = "1.0.193"
thiserror = "1.0"
url = "2.4.0"
url2 = "0.0.6"
zip = { version = "0.6" }
bzip2 = { version = "0.4", features = ["static"] }
portpicker = "0.1"
mime_guess = "2.0.4"
hyper = { version = "0.14.27", features = ["full"] }
tls-listener = "0.8"
futures = "0.3"
either = "*"
tokio = "1"
one_err = "0"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha" }
